--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
             character_counter = 0;
         function updateText()
         {
-            el.innerHTML = el.innerHTML+words[word_counter][character_counter++];
+            var character = words[word_counter][character_counter++];
+
+            if (character === ' ') {
+                character = "&nbsp;" // use non-breaking space character
+            }
+
+            el.innerHTML = el.innerHTML + character;
             if(character_counter == words[word_counter].length + 1)
             {
                 word_counter++;     //choose a different word
                 character_counter = 0;    //start over with the first character of the word
                 el.innerHTML = '';  //set the html to be blank
                 //if we're displaying the last word, go back to the first word
-                if(word_counter == words.length + 1) {
+                if(word_counter == words.length) {
                     word_counter = 0;
                 }     
             }
